--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
 
     </p>
 </div>
-<div>
+    <div>
     <h2>Copyright @copy; 2025 Yummy Foods</h2>
     <p>All Rights Reseved</p>
     <p>Developed and Maintained By
-        <a> href=" ">CodingBrains</a>
+        <a href="https://rohitha321.github.io/foodie/">rohitha321</a>
     </p>
-</div>
+   </div>
     
 
 
